# StringTwine

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt  flake.nix
benchmark/: CMakeLists.txt
benchmark/src/: twine.cpp
include/cool/: basic_twine.hpp  string_twine.hpp  twine.hpp
test/: CMakeLists.txt
test/src/: some-test.cpp  twine.cpp
